Fix documentation for Fiber#raise [ci skip]

Fixes [Bug #16912]